--- a/src/app/pages/blog-detail/blog-detail.html
+++ b/src/app/pages/blog-detail/blog-detail.html
@@ -73,61 +73,44 @@
                         <div class="dtl-doctor-head d-flex align-items-center justify-content-between">
                             <h4>Categories</h4>
                         </div>
-                        <div class="dtl-doctor-info">
-                            <p><a href="#">Health and Wellness</a></p>
+                        
+                        <!-- Dynamic categories from blog data -->
+                        <div class="dtl-doctor-info" *ngFor="let category of categories">
+                            <p>
+                                <a href="#" (click)="filterByCategory(category); $event.preventDefault()">
+                                    {{ category }}
+                                </a>
+                            </p>
                         </div>
-                        <div class="dtl-doctor-info">
-                            <p><a href="#">Health News</a></p>
-                        </div>
-                        <div class="dtl-doctor-info">
-                            <p><a href="#">Advances and Technology</a></p>
-                        </div>
-                        <div class="dtl-doctor-info">
-                            <p><a href="#">Oncology</a></p>
-                        </div>
-                        <div class="dtl-doctor-info">
-                            <p><a href="#">Patient Stories</a></p>
-                        </div>
-                        <div class="dtl-doctor-info">
-                            <p><a href="#">Ayurveda & Wellness</a></p>
+                        
+                        <!-- Fallback message if no categories -->
+                        <div class="dtl-doctor-info" *ngIf="categories.length === 0">
+                            <p class="text-muted">No categories available</p>
                         </div>
                     </div>
                 </div>
                 <div class="detail-doctors recent-post">
-                    <div class="dtl-doctor-head d-flex align-items-center justify-content-between">
+                                        <div class="dtl-doctor-head d-flex align-items-center justify-content-between">
                         <h4>Recent Posts</h4>
                     </div>
-                    <div class="dtl-doctor-list d-flex align-items-center">
+                    
+                    <!-- Dynamic recent posts from blog data -->
+                    <div class="dtl-doctor-list d-flex align-items-center" *ngFor="let post of recentPosts">
                         <div class="dtl-doctor-img">
-                            <img [src]="'assets/images/recent-post.png'" class="img-fluid">
+                            <img [src]="getImageUrl(post.featured_image)" class="img-fluid">
                         </div>
                         <div class="dtl-doctor-info">
-                            <p>Do’s and Don’ts or precautions after cataract</p>
+                            <p>
+                                <a [attr.href]="'/blog-detail/' + post.id" class="text-decoration-none">
+                                    {{ post.title }}
+                                </a>
+                            </p>
                         </div>
                     </div>
-                    <div class="dtl-doctor-list d-flex align-items-center">
-                        <div class="dtl-doctor-img">
-                            <img [src]="'assets/images/recent-post.png'" class="img-fluid">
-                        </div>
-                        <div class="dtl-doctor-info">
-                            <p>Do’s and Don’ts or precautions after cataract</p>
-                        </div>
-                    </div>
-                    <div class="dtl-doctor-list d-flex align-items-center">
-                        <div class="dtl-doctor-img">
-                            <img [src]="'assets/images/recent-post.png'" class="img-fluid">
-                        </div>
-                        <div class="dtl-doctor-info">
-                            <p>Do’s and Don’ts or precautions after cataract</p>
-                        </div>
-                    </div>
-                    <div class="dtl-doctor-list d-flex align-items-center">
-                        <div class="dtl-doctor-img">
-                            <img [src]="'assets/images/recent-post.png'" class="img-fluid">
-                        </div>
-                        <div class="dtl-doctor-info">
-                            <p>Do’s and Don’ts or precautions after cataract</p>
-                        </div>
+                    
+                    <!-- Fallback message if no recent posts -->
+                    <div class="dtl-doctor-info" *ngIf="recentPosts.length === 0">
+                        <p class="text-muted">No recent posts available</p>
                     </div>
                 </div>
             </div>
